Override box shadow and border settings for linked dialog buttons so they don't looked mashed together. Extra border radius is required to stop the button background bleeding through the border.

--- a/Radiance/gtk-3.0/gtk-widgets.css
+++ b/Radiance/gtk-3.0/gtk-widgets.css
@@ -286,6 +286,13 @@ GtkAssistant .sidebar {
     box-shadow: none;
 }
 
+/* Make linked dialog buttons look like they are not linked */
+.message-dialog .linked.dialog-action-area .button {
+    border-image-width: 12px;
+    box-shadow: none;
+    border-radius: 7px;
+}
+
 /****************
  * cell and row *
  ****************/
